--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
 
     <string name="text_welcome_message">Welcome to Android Tutorials Hub</string>
     <string name="text_dialog_bottom_sheet">Dialog Bottom Sheet</string>
-    <string name="text_expand_me">Expand Me</string>
+    <string name="text_expand_me">Menu</string>
     <string name="text_collapse_me">Collapse Me</string>
 </resources>
